--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "js-cookie": "^3.0.5",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.4",
     "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
